--- a/pom.xml
+++ b/pom.xml
@@ -414,6 +414,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <distributionManagement>
+       <repository>
+         <id>github</id>
+         <name>GitHub IDUN Apache Maven Packages</name>
+         <url>https://maven.pkg.github.com/idun-corp</url>
+       </repository>
+    </distributionManagement>
 
     <build>
         <extensions>
