--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,14 @@
         </dependencies>
     </dependencyManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub IDUN Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/idun-corp</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <resources>
 
