--- a/pom.xml
+++ b/pom.xml
@@ -414,6 +414,19 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub IDUN Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/idun-corp/neo4j-ogm</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <name>libs-release</name>
+            <url>https://idunrealestate.jfrog.io/artifactory/libs-release</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <resources>
