--- a/pom.xml
+++ b/pom.xml
@@ -417,9 +417,9 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub IDUN Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/idun-corp/neo4j-ogm</url>
+            <id>central</id>
+            <name>libs-release</name>
+            <url>https://idunrealestate.jfrog.io/artifactory/libs-release</url>
         </repository>
     </distributionManagement>
 
